Override word-break and word-wrap CSS styles to prevent wrapping in code blocks
Test Plan: hugo server

Reviewers: sid, karthik, ram, kannan

Reviewed By: ram

Subscribers: Yugaweb

Differential Revision: https://phabricator.dev.yugabyte.com/D3358

--- a/docs/static/css/yuga-overrides.css
+++ b/docs/static/css/yuga-overrides.css
@@ -152,6 +152,8 @@ a {
   color: #fff !important;
   background: #151838;
   white-space: pre !important;
+  word-wrap: normal;
+  word-break: keep-all;
 }
 .palette-primary-orange .article pre code .hljs-comment {
   color: #afb5c7;
